--- a/src/css/768.less
+++ b/src/css/768.less
@@ -5,3 +5,13 @@
 #main {
 	background-size: auto auto;
 }
+
+////////////////////////////////////////////////////////////////////////////////
+// Page
+////////////////////////////////////////////////////////////////////////////////
+
+#home-page {
+	#examples {
+		padding-left: 3em;
+	}
+}
