--- a/src/css/960.less
+++ b/src/css/960.less
@@ -3,6 +3,6 @@
 ////////////////////////////////////////////////////////////////////////////////
 
 #main {
-	margin: 0 auto;
-	max-width: 64em;
+	margin: 4.5em auto 0;
+	max-width: 73.143em;
 }
