--- a/src/css/base.less
+++ b/src/css/base.less
@@ -120,17 +120,23 @@ textarea {
 ////////////////////////////////////////////////////////////////////////////////
 
 body {
-	font-family: 'Helvetica Neue', Helvetica, sans-serif;
-	letter-spacing: -1px;
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 0.875em;
+	color: #444;
 }
 h1 {
-	font-size: 1.4em;
+	font-size: 1.571em;
 }
 h2 {
-	font-size: 1.2em;
+	font-size: 1.357em;
 }
 h3 {
-	font-size: 1.063em;
+	font-size: 1.143em;
+}
+h1, h2, h3, h4 {
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	color: #222;
+	letter-spacing: -1px;
 }
 a, a:visited {
 	color: @grey0;
